resources/css/theme.css
/*
 * Pages have the following high-level structure:
 *
 * wt-global wt-theme-<THEME> wt-route-<ROUTE>
 * +---wt-header-wrapper
 * |   +---wt-header-container
 * |       +---wt-header-content
 * |           +---wt-accessibility-links
 * |           +---wt-site-logo
 * |           +---wt-site-title
 * |           +---wt-header-search
 * |           |   +---wt-header-search-form
 * |           |       +---wt-header-search-field
 * |           |       +---wt-header-search-button
 * |           +---wt-secondary-navigation
 * |           |   +---wt-user-menu
 * |           +---wt-primary-navigation
 * |               +---wt-genealogy-menu
 * +---wt-main-wrapper
 * |   +---wt-main-container
 * |       +---wt-main-content
 * |           +---wt-messages
 * |           +---wt-page-title
 * |           +---wt-page-options wt-page-options-xxxxx
 * |           +---wt-page-content
 * +---wt-footers
 *     +---wt-footer wt-footer-xxxxx
 */

:root {
    --bs-body-bg: var(--bgColor-default);
    --bs-body-color: var(--fgColor-default);
    --bs-body-font-size: 14px;
    --bs-border-radius: 6px;
    --bs-border-color: var(--borderColor-default);
    --bs-btn-bg: var(--button-default-bgColor-rest);
    --bs-table-border-color: var(--bs-border-color);
    --bs-dropdown-bg: var(--overlay-bgColor,var(--color-canvas-overlay,#161b22));
    --bs-dropdown-font-size: var(--bs-body-font-size);
    --bs-dropdown-link-active-bg: var(--bs-link-color);
    --bs-emphasis-color: var(--bs-link-color);
    --bs-font-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
    --bs-form-check-bg: var(--control-checked-bgColor-rest);
    --bs-heading-color: var(--bs-body-color);
    --dt-html-background: var(--bs-body-bg);
    --bs-link-color: var(--fgColor-default);
    --bs-link-decoration: none;
    --bs-link-hover-color: var(--fgColor-accent);
    --bs-link-hover-decoration: underline;
    --bs-nav-link-font-size: var(--bs-body-font-size);
    --bs-nav-tabs-link-active-color: var(--fgColor-default);
    --bs-secondary-color: var(--fgColor-muted);
    --bs-secondary-bg: var(--bs-body-bg);
    --link-color: var(--bs-link-color);
    --link-decoration: var(--bs-link-decoration);
    --link-color-hover: var(--fgColor-accent);
    --sex-m-bg: var(--data-blue-color-muted);
    --sex-f-bg: var(--data-pink-color-muted);
    --base-text-weight-semibold: 600;
}

[dir] .nav-tabs .nav-link.active {
    font-weight: var(--base-text-weight-semibold);
    border: none;
    border-bottom-color: var(--underlineNav-borderColor-active);
    border-bottom-width: 2px;
    border-bottom-style: solid;
}

[dir] .dropdown-item {
    color: var(--control-fgColor-rest);
}

[dir] .dropdown-item.active, [dir] .dropdown-item:active {
    background-color: var(--control-transparent-bgColor-selected);
}

[dir] .dropdown-item:hover, [dir] .dropdown-item.active:hover, [dir] span.twitter-typeahead .tt-suggestion:focus, [dir] span.twitter-typeahead .tt-suggestion:hover {
    background-color: var(--control-transparent-bgColor-hover);
    color: var(--control-fgColor-rest);
}

[dir] .form-control {
    background-color: var(--bgColor-muted, var(--color-canvas-inset));
    font-size: var(--bs-body-font-size);
}

[dir] .accordion-button.collapsed::after {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%238F95A0'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
}

[dir] .accordion-button:not(.collapsed)::after {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%238F95A0'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
}

[dir] .accordion-button:focus {
    box-shadow: 1px 1px #30363D !important;
}

.wt-site-title {
    font-size: 14px;
}

.wt-page-title {
    font-size: 20px;
}

.wt-genealogy-menu {
    justify-content: left;
}

[dir] .wt-global, [dir] ::backdrop {
    background-color: var(--bs-body-bg);
    color: var(--bs-body-color);
    font-size: 14px;
}

.wt-global, ::backdrop {
    color: var(--bs-body-color);
}

[dir] .form-check-input {
    background-color: var(--control-checked-bgColor-disabled);
    border: var(--bs-border-width) solid var(--control-checked-borderColor-disabled);
}

[dir] .form-check-input:checked {
    background-color: var(--selection-bgColor);
    border-color: var(--control-checked-borderColor-rest);
}

[dir] .form-check-input:hover {
    background-color: var(--control-checked-bgColor-hover);
    border-color: var(--control-checked-borderColor-hover);
}

input[type="search"] {
    background-color: transparent;
    border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
    border-radius: var(--bs-border-radius);
    padding: 0.25rem 0.5rem;
}

.ts-control, .ts-control input, .ts-dropdown {
    color: var(--bs-body-color);
}

[dir] .wt-header-wrapper {
    background: var(--bgColor-inset);
}

#quick-search {
    background: transparent;
    border-radius: var(--bs-border-radius);
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
}

[dir] .wt-primary-navigation {
    border-bottom-width: 1px;
    border-color: var(--bs-border-color);
}

[dir] .table {
    margin-bottom: 0.75rem;
}

[dir] .wt-facts-table {
    border-collapse: separate;
}

[dir] .wt-facts-table tr > * {
    border: none;
    border-bottom: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
    color: var(--bs-body-color);
}

[dir] .wt-facts-table th {
    background-color: var(--bgColor-muted);
}

[dir] .wt-facts-table td {
    background-color: transparent;
    border-right: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
}
/* ... */

